--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <div id="seccionRegistrar" class="formularioAuth">
             <h2>Crear cuenta</h2>
             <form id="formularioRegistrar">
+                <label for="nombreCompleto">Nombre completo:</label>
+                <input type="text" id="nombreCompletoRegistrar" required>
                 <label for="usuarioRegistrar">Nombre de usuario:</label>
                 <input type="text" id="usuarioRegistrar" required>
                 <label for="contrasenaRegistrar">Contraseña:</label>
@@ -27,17 +29,15 @@
             </form>
         </div>
 
-        <div id="seccionIngresar">
-            <div id="seccionLogin" class="formularioAuth">
-                <h2>Iniciar sesión</h2>
-                <form id="formularioLogin">
-                    <label for="usuarioLogin">Nombre de usuario:</label>
-                    <input type="text" id="usuarioLogin" required>
-                    <label for="contrasenaLogin">Contraseña:</label>
-                    <input type="password" id="contrasenaLogin" required>
-                    <button type="submit">Iniciar sesión</button>
-                </form>
-            </div>
+        <div id="seccionLogin" class="formularioAuth">
+            <h2>Iniciar sesión</h2>
+            <form id="formularioLogin">
+                <label for="usuarioLogin">Nombre de usuario:</label>
+                <input type="text" id="usuarioLogin" required>
+                <label for="contrasenaLogin">Contraseña:</label>
+                <input type="password" id="contrasenaLogin" required>
+                <button type="submit">Iniciar sesión</button>
+            </form>
         </div>
 
         <div id="seccionJuego">
@@ -53,8 +53,16 @@
             </div>
             <div id="resultado"></div>
         </div>
-    </div>
 
+        <div id="seccionUsuarios" style="display: none;">
+            <h2>Usuarios Adheridos</h2>
+            <ul id="listaUsuarios"></ul>
+            <button id="verTodosBtn">Ver todos</button>
+            <button id="verMenosBtn">Ver menos</button>
+        </div>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
     <script src="./js/usuario.js"></script>
     <script src="./js/juego.js"></script>
 </body>
